--- a/FinalProject/Views/Home/frontendtemp.cshtml
+++ b/FinalProject/Views/Home/frontendtemp.cshtml
@@ -7,8 +7,11 @@ body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; backg
     h1 {
        text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px white;
     }
+    p {
+        text-shadow: 1px 1px 2px gray, 0 0 25px white, 0 0 5px white;
+    }
     .btn-default {
-        /*//color: white;*/
+        color: slateblue;
         border-color:none;
     }
 
@@ -19,5 +22,6 @@ body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; backg
 </style>
 <div class="container-fluid modal-body" style="position: fixed;width: 100%;height: 100%;left: 0;top: 30%;z-index: 10;">
     <h1 class="text-center" style="font-size:60px;color:white;">Take The Survey!</h1>
-    <p style="text-align:center;"><a href="/Home/QuestionsTemp/" class=" btn-default btn-lg" style="border:1px solid white; color:White;">Learn more &raquo;</a></p>
+    <br/>
+    <p style="text-align:center;"><a href="/Home/QuestionsTemp/" class=" btn-default btn-lg" style="border:1px solid white; color: cadetblue;">Take The Survey!</a></p>
 </div>
