--- a/FinalProject/Views/Home/NewState.cshtml
+++ b/FinalProject/Views/Home/NewState.cshtml
@@ -6,11 +6,12 @@
 @{ double int1 = Convert.ToDouble(ViewBag.test1[1]); double int2 = Convert.ToDouble(ViewBag.test1[2]); double int3 = Convert.ToDouble(ViewBag.test1[22]);
     double percent = Math.Round((int3 / (int1 + int2)) * 100, 0);
     double index1 = Convert.ToDouble(ViewBag.test1[1]); double index2 = Convert.ToDouble(ViewBag.test1[2]); double UserGender = Convert.ToDouble(ViewBag.test1[22])/*<<<<This is the user gender info*/;
-    double Genpercent = Math.Round((UserGender / (index1 + index2)) * 100, 0);
+    double Genpercent = Math.Round((UserGender / (index1 + index2)) * 100, 2);
     double index3 = Convert.ToDouble(ViewBag.test1[3]); double index4 = Convert.ToDouble(ViewBag.test1[4]); double index5 = Convert.ToDouble(ViewBag.test1[5]); double index6 = Convert.ToDouble(ViewBag.test1[6]); double index7 = Convert.ToDouble(ViewBag.test1[7]); double index8 = Convert.ToDouble(ViewBag.test1[8]); double index9 = Convert.ToDouble(ViewBag.test1[9]); double index10 = Convert.ToDouble(ViewBag.test1[10]); double index11 = Convert.ToDouble(ViewBag.test1[11]); double UserAge = Convert.ToDouble(ViewBag.test1[6]);  /**/ double Ageint3 = Convert.ToDouble(ViewBag.test1[23])/*<<<<This is the user age info*/;
-    double Agepercent = Math.Round((UserAge / (index3 + index4 + index5 + index6 + index7 + index8 + index9 + index10 + index11)) * 100, 0);
+    double Agepercent = Math.Round((UserAge / (index3 + index4 + index5 + index6 + index7 + index8 + index9 + index10 + index11)) * 100, 2);
     double index12 = Convert.ToDouble(ViewBag.test1[12]); double index13 = Convert.ToDouble(ViewBag.test1[13]); double index14 = Convert.ToDouble(ViewBag.test1[14]); double index15 = Convert.ToDouble(ViewBag.test1[15]); double index16 = Convert.ToDouble(ViewBag.test1[16]); double index17 = Convert.ToDouble(ViewBag.test1[17]); double index18 = Convert.ToDouble(ViewBag.test1[18]); double index19 = Convert.ToDouble(ViewBag.test1[19]); double index20 = Convert.ToDouble(ViewBag.test1[20]); double index21 = Convert.ToDouble(ViewBag.test1[21]); double index22 = Convert.ToDouble(ViewBag.test1[22]); double UserIncome = Convert.ToDouble(ViewBag.test1[6]); /*<<<<This is the Income info*/;
-    double Incomepercent = Math.Round((UserIncome / (index12 + index13 + index14 + index15 + index16 + index17 + index18 + index19 + index20 + index21 + index22)) * 100, 0);
+    double Incomepercent = Math.Round((UserIncome / (index12 + index13 + index14 + index15 + index16 + index17 + index18 + index19 + index20 + index21)) * 100, 2);
+    double rank = Math.Round((((((int1 + int2)) * Genpercent / 100) * Agepercent / 100) * Incomepercent / 100), 0); // builds the user rank overall for state
 }
 <ul>
     <li id="male">Total Male: @ViewBag.test1[1]</li>
@@ -59,6 +60,12 @@
         <td>@ViewBag.IncomeLabel</td>
         <td>@ViewBag.test1[24]</td>
         <td>@Incomepercent</td>
+    </tr>
+    <tr>
+        <td>Your rank by State:</td>
+        <td>@rank</td>
+        <td></td>
+        <td></td>
     </tr>
 </table>
 <br />
