--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "frontendtemp", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("How's My Life", "frontendtemp", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -32,6 +32,7 @@
     <div class="container body-content">
         @RenderBody()
     
+
     </div>
 
     @Scripts.Render("~/bundles/jquery")
