marital, education & children status added

--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -75,6 +75,12 @@
         <td></td>
     </tr>
     <tr>
+        <td>Education Level:</td>
+        <td>@ViewBag.EducationLabel</td>
+        <td>@ViewBag.test1[24]</td>
+        <td></td>
+    </tr>
+    <tr>
         <td>Lifetime Earnings:</td>
         <td>$@totalEarnings</td>
         <td></td>
