--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -155,6 +155,11 @@
         <td></td>
     </tr>
 </table>
+<br />
+ViewBag.EducationSuggestion
+<br />
+ViewBag.HousingSuggestion
+<br />
 <form action="/Home/NewState">
     <label>Change your state?</label>    <select name="stateid">
         <option value="01" name="stateid">Alabama</option>
