--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -139,6 +139,9 @@
     <input type="radio" name="residentialstatus" value="rent"> Rent<br>
     <input type="radio" name="residentialstatus" value="par1"> I live with my parents<br>
     <br />
+    <h3>How much a month do you pay in rent? (0 if you do not rent)</h3>
+    <input type="text" name="grosserent" pattern="^\d+$" required/>
+    <br />
     <input type="submit" name="Submit" />
 </form>
 <br />
@@ -147,7 +150,3 @@
 <br />
 <br />
 <br />
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
