--- a/FinalProject/Views/Home/QuestionsTemp.cshtml
+++ b/FinalProject/Views/Home/QuestionsTemp.cshtml
@@ -113,8 +113,8 @@
 
 
 
-        @*<h3>Enter your City</h3>
-        <input type="text" name="city" pattern="[a-zA-Z]+(?:[ '-][a-zA-Z]+)*" required />*@
+        <h3>Enter your City</h3>
+        <input type="text" name="city" pattern="[a-zA-Z]+(?:[ '-][a-zA-Z]+)*" required />
 
         <h3>Select Your Marital Status</h3>
         <input type="radio" name="maritalstatus" value="DP02_0010E" checked> Single<br>
