--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -140,7 +140,7 @@
     <input type="radio" name="residentialstatus" value="par1"> I live with my parents<br>
     <br />
     <h3>How much a month do you pay in rent? (0 if you do not rent)</h3>
-    <input type="text" name="grosserent" pattern="^\d+$" required/>
+    <input type="text" name="grosserent" pattern="^\d+$" value="0" required/>
     <br />
     <input type="submit" name="Submit" />
 </form>
