--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -158,9 +158,12 @@
     </tr>
 </table>
 <br />
-ViewBag.EducationSuggestion
 <br />
-ViewBag.HousingSuggestion
+@ViewBag.EducationSuggestion
+<br />
+<br />
+@ViewBag.HousingSuggestion
+<br />
 <br />
 <form action="/Home/NewState">
     <label>Change your state?</label>    <select name="stateid">
