--- a/FinalProject/Views/Home/QuestionsTemp.cshtml
+++ b/FinalProject/Views/Home/QuestionsTemp.cshtml
@@ -169,6 +169,10 @@
         <input type="radio" name="residentialstatus" value="rent"> Rent<br>
         <input type="radio" name="residentialstatus" value="par1"> I live with my parents<br>
         <br />
+        <h3>How much a month do you pay in rent? (0 if you do not rent)</h3>
+        <input type="text" name="grosserent" pattern="^\d+$" value="0" required />
+        <br />
+        <br />
         <br />
         <input type="submit" name="Submit" />
         <br />
