--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -133,7 +133,7 @@
     </tr>
     <tr>
         <td>Education Level:</td>
-        <td>@ViewBag.EducationLabel</td>
+        <td>@ViewBag.educationLabels</td>
         <td>@ViewBag.test2[30]</td>
         <td>@Edupercent%</td>
     </tr>
