--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<br />
+
+
 
 @*<ul>
         <li>Total Male: @ViewBag.test1[1]</li>
@@ -219,6 +220,8 @@
         <option value="55" name="stateid">Wisconsin</option>
         <option value="56" name="stateid">Wyoming</option>
     </select>
-    <input type="submit" value="Change!" name="submit" />
+    <input type="submit" value="Change!" />
 </form>
+<table>
 
+</table>
