--- a/FinalProject/Views/Home/QuestionsTemp.cshtml
+++ b/FinalProject/Views/Home/QuestionsTemp.cshtml
@@ -125,11 +125,11 @@
 
         <h3>Do you have children?</h3>
         <select name="haschildren">
-            <option value="false">No</option>
+            <option value="false" selected>No</option>
             <option value="true">Yes</option>
         </select>
         <h4>how many?</h4>
-        <input type="number" name="numberofkids" min="0" max="20" placeholder="0" />
+        <input type="number" value="0" name="numberofkids" min="0" max="20" />
 
         <h3>Select your highest level of education</h3>
         <select name="collegeeducation">
